--- a/test.ini
+++ b/test.ini
@@ -2,30 +2,10 @@
 base = "rss/"
 
 [source001]
-name = "mckinsey_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
+name = "let_offers_rss.xml"
+url = "https://lowendtalk.com/categories/offers/feed.rss"
 max = "10"
-md5 = "6417ec54415615f87fd1562c59f19960"
+md5 = ""
 action = "auto"
 
-[source002]
-name = "mckinsey_iw_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
-max = "10"
-md5 = "6417ec54415615f87fd1562c59f19960"
-action = "en->iw"
-
-[source003]
-name = "nature_rss.xml"
-url = "http://rss.acast.com/nature"
-max = "10"
-md5 = "f28e984d92a0e45e996f4f1b3dcdbc39"
-action = "auto"
-
-[source004]
-name = "BBC_Top_Stories_rss.xml"
-url = "http://feeds.bbci.co.uk/news/rss.xml"
-max = "10"
-md5 = "2b702aad6a49f68c0af8e24952d0d3b6"
-action = "en->zh-CN"
 
